deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampledev-deployment
  labels:
    app: sample
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample
  template:
    metadata:
      labels:
        app: sample
    spec:
      containers:
      - name: sample
        image: gcr.io/sample-dev/sampledev2:latest
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz          
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
