service443.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service443
spec:
  type: NodePort
  selector:
    app: sample
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8080
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
