ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.global-static-ip-name: "samplestaticIP"
    networking.gke.io/managed-certificates: sample-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: sample-service443
      port:
        name: https
